Added locking clicking to some buttons

--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
@@ -499,6 +499,10 @@
         {
             "key": "close",
             "value": "Close"
+        },
+        {
+            "key": "input-length",
+            "value": "Username must be longest!"
         }
     ]
 }
