--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -499,6 +499,10 @@
         {
             "key": "close",
             "value": "Закрити"
+        },
+        {
+            "key": "input-length",
+            "value": "Ім'я користувача повинне бути довшим!"
         }
     ]
 }
