Fixed bug with data sync

--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
@@ -503,6 +503,10 @@
         {
             "key": "input-length",
             "value": "Username must be longest!"
+        },
+        {
+            "key": "dont-match",
+            "value": "Passwords don't match!"
         }
     ]
 }
