--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -503,6 +503,10 @@
         {
             "key": "input-length",
             "value": "Ім'я користувача повинне бути довшим!"
+        },
+        {
+            "key": "dont-match",
+            "value": "Паролі не співпадають!"
         }
     ]
 }
